# MathImg2Latex

./: .gitignore  README.md  environment.yaml  gradio_app.py  pyproject.toml  streamlit_app.py
config/: base.yaml
examples/: predict.py  run_latex_ocr.py
experiment/: donut_experiment.py
flask_math2latex/: launch.sh  monitor.sh  server.py
flask_math2latex/config/: config.py
flask_math2latex/model_server/: nougat_server.py  ollama_server.py  pix2text_server.py
flask_math2latex/nougat_latex/: util.py
flask_math2latex/static/css/: style.css
flask_math2latex/static/js/: image2latex.js
flask_math2latex/templates/: index.html
metrics/: token_acc_metrics.py
mydatasets/: donut_dataset.py  im2latex230k.py  im2latex_230k_170k_100k.py  train_data.py
ollama_server/: onnx_deploy.py  onnx_export_test.py  openvino_test.py  safetensors_test.py  torch_export.py
tools/: train_experiment.py
